# BLT-Hackathon

./: FEATURES.md  README.md  SUMMARY.md  TESTING.md  config.example.js  hackathon.html  index.html  stats.json
.github/ISSUE_TEMPLATE/: create-hackathon.yml
.github/workflows/: create-hackathon.yml  update-stats.yml
hackathon-data/: gsoc-2026-warmup.json  may-2025-hackathon.json  summer-2025-hackathon.json
js/: config.js  github-api.js  index.js  main.js
plugin/django-hackathon/: CONTRIBUTING.md  README.md  TESTING_GUIDE.md  pyproject.toml
plugin/django-hackathon/blt-hackathon/: __init__.py  apps.py  forms.py  views.py
plugin/django-hackathon/blt_hackathon/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
plugin/django-hackathon/blt_hackathon/templates/: base.html  detail.html  form.html  list.html  prize_form.html  sponsor_form.html
plugin/django-hackathon/blt_hackathon/templatetags/: __init__.py  custom_tags.py
